egress-mx-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: originate-mtls-for-nginx-user1-mx
  namespace: egress-mx
spec:
  host: my-nginx-mx.user1-mesh-external.svc.cluster.local
  workloadSelector:
    matchLabels:
      app: egress-mx
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    portLevelSettings:
    - port:
        number: 443
      tls:
        credentialName: user1-mesh-external-egress-nginx-client-certs-mx
        mode: MUTUAL
        sni: my-nginx-mx.user1-mesh-external.svc.cluster.local
        insecureSkipVerify: true
